added pridyucts to the list

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -47,17 +47,57 @@
     <script>
         var shoe_data = [
             {
+                //Product 1
                 price: "$143 USD",
                 image: "../assets/Kendrick.jpg",
                 style: "Nike React Element 55 Kendrick Lamar SE",
                 sizes: [7, 8, 9, 10, 11, 12, 13]
             },
             {
+                //Product 2
+                price: "$229 USD",
+                image: "../assets/adidasYeezyBoost.jpg",
+                style: "Adidas Yeezy Boost 350-V2 Clay",
+                sizes: [7, 8, 9, 10, 11, 12, 13] 
+            },
+            {
+                //Product 3
+                price: "$162 USD",
+                image: "../assets/Kendrick.jpg",
+                style: "Air Jordan 9 Retro Racer Blue",
+                sizes: [7, 8, 9, 10, 11, 12, 13] 
+            },
+            {
+                //product 4
+                price: "$440 USD",
+                image: "assets/Nike-SB-Dunk-Low-StrangeLove-Skateboards-Product.jpg",
+                style: "Nike-SB-Dunk-Low-StrangeLove-Skateboards",
+                sizes: [7, 8, 9, 10, 11, 12, 13] 
+            },
+            {
+                //product 5
+                price: "$485 USD",
+                image: "assets\Nike-Lebron-7-Christ-The-King-Product.jpg",
+                style: "Nike-Lebron-7-Christ-The-King",
+                sizes: [7, 8, 9, 10, 11, 12, 13] 
+            },
+            {
+                //product 6
                 price: "$143 USD",
                 image: "../assets/Kendrick.jpg",
                 style: "Nike React Element 55 Kendrick Lamar SE",
                 sizes: [7, 8, 9, 10, 11, 12, 13] 
-            }
+            },
+            {
+                price: "$143 USD",
+                image: "../assets/Kendrick.jpg",
+                style: "Nike React Element 55 Kendrick Lamar SE",
+                sizes: [7, 8, 9, 10, 11, 12, 13] 
+            },
+            
+
+            
+
         ]
         $("#card_data").mirandajs(shoe_data);
     </script>
