added all the paths but the images dont display

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -83,15 +83,15 @@
             },
             {
                 //product 6
-                price: "$143 USD",
-                image: "../assets/Kendrick.jpg",
-                style: "Nike React Element 55 Kendrick Lamar SE",
+                price: "$1650 USD",
+                image: "assets\Nike-Kobe-6-Grinch-Christmas-Product.jpg",
+                style: "Nike-Kobe-6-Grinch-Christmas",
                 sizes: [7, 8, 9, 10, 11, 12, 13] 
             },
-            {
-                price: "$143 USD",
-                image: "../assets/Kendrick.jpg",
-                style: "Nike React Element 55 Kendrick Lamar SE",
+            {//product 7
+                price: "$210 USD",
+                image: "assets\Nike-Kobe-4-Protro-Undefeated-Milwaukee-Bucks-Product.jpg",
+                style: "Nike Kobe 4 Protro Undefeated Milwaukee Bucks",
                 sizes: [7, 8, 9, 10, 11, 12, 13] 
             },
             
