filter and sort done

--- a/index.html
+++ b/index.html
@@ -75,8 +75,15 @@
     <div class="sneaker-cards">
         <div class="container">
             <div class="row">
+                <div class="col-sm">
+                    <div>
+                        <h2>SKKD Shoes</h2>
+                        <p>We provide the most coveted shoes for an affordable price! We know what its like waking up at the crack of dawn only to recieve an "L" on the shoes you want. 
+                           We created SKKD shoes not only for college credit, but for people to get the shoes they want at a price they like!</p>
+                    </div>
+                      </div>
               <div class="col-sm">
-               <div class="card" style="width: 18rem;">
+               <div class="card" >
             <img src="assets/Kendrick.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike React Element 55 Kendrick Lamar SE</h5>
@@ -86,7 +93,7 @@
           </div>
         </div>
             <div class="col-sm">
-            <div class="card" style="width: 18rem;">
+            <div class="card" >
             <img src="assets/Jordan 4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Jordan 4 Retro What the (GS)</h5>
@@ -96,7 +103,7 @@
           </div>
               </div>
               <div class="col-sm">
-               <div class="card" style="width: 18rem;">
+               <div class="card" >
             <img src="assets/Jordan 1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Jordan New Beginnings Pack 1</h5>
