--- a/index.html
+++ b/index.html
@@ -75,20 +75,14 @@
     <div class="sneaker-cards">
         <div class="container">
             <div class="row">
-                <div class="col-sm">
-                    <div>
-                        <h2>SKKD Shoes</h2>
-                        <p>We provide the most coveted shoes for an affordable price! We know what its like waking up at the crack of dawn only to recieve an "L" on the shoes you want. 
-                           We created SKKD shoes not only for college credit, but for people to get the shoes they want at a price they like!</p>
-                    </div>
-                      </div>
+
               <div class="col-sm">
                <div class="card" >
             <img src="assets/Kendrick.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike React Element 55 Kendrick Lamar SE</h5>
               <p class="card-text">$143 USD</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Purchase</a>
             </div>
           </div>
         </div>
@@ -98,7 +92,7 @@
             <div class="card-body">
               <h5 class="card-title">Jordan 4 Retro What the (GS)</h5>
               <p class="card-text">$183 USD</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Purchase</a>
             </div>
           </div>
               </div>
@@ -108,7 +102,7 @@
             <div class="card-body">
               <h5 class="card-title">Jordan New Beginnings Pack 1</h5>
               <p class="card-text">$169 USD</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Purchase</a>
             </div>
           </div>
               </div>
@@ -116,6 +110,15 @@
           </div>
         
     </div>
+    <div class="col-sm">
+        <div>
+            <br>
+            <h2>SKKD Shoes</h2>
+            <br>
+            <p>We provide the most coveted shoes for an affordable price! We know what its like waking up at the crack of dawn only to recieve an "L" on the shoes you want. 
+               We created SKKD shoes not only for college credit, but for people to get the shoes they want at a price they like!</p>
+        </div>
+          </div>
    
     
 
