--- a/pages/shop.html
+++ b/pages/shop.html
@@ -31,19 +31,17 @@
         </div>
     </nav>
     <div class="filter-wrapper">
-
+        <br>
         <div class="form-group" style="margin-right: 20px;">
-            <label for="orderBy">Order By</label>
-            <select id="orderBy" name="orderBy">
-                <option value=""></option>
+            <select id="orderBy" name="orderBy" class="form-control form-control-lg">
+                <option value="">Order By</option>
                 <option value="style">Name</option>
                 <option value="price">Price</option>
             </select>
         </div>
-
-        <div class="form-group">
-            <label for="published">Show Available Items Only</label>	
-            <select id="published" name="published">
+        <div class="form-group">	
+            <select id="published" name="published" class="form-control form-control-lg">
+                <option value="">Only Show Available Items</option>
                 <option value="true">True</option>
                 <option value="false">False</option>
             </select>
@@ -51,8 +49,25 @@
 
     </div>
     <div id="card-result" class="wrapper"></div>
-    <div id="card-result2"></div>
-    <div id="card-result3"></div>
+    <br>
+    <nav class="pagination" aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Next</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
