added some stuff to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SKKD Shoes</title>
+    <title>SKKD Shoes </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -76,58 +76,94 @@
         <div class="container">
             <div class="row">
 
-              <div class="col-sm">
-               <div class="card" >
-            <img src="assets/Kendrick.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Nike React Element 55 Kendrick Lamar SE</h5>
-              <p class="card-text">$143 USD</p>
-              <a href="#" class="btn btn-primary">Purchase</a>
+
+                <div class="col-sm">
+                    <div class="card">
+                        <img src="assets/Jordan 4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jordan 4 Retro What the (GS)</h5>
+                            <p class="card-text">$183 USD</p>
+                            <a href="#" class="btn btn-primary">Purchase</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="card">
+                        <img src="assets/Kendrick.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike React Element 55 Kendrick Lamar SE</h5>
+                            <p class="card-text">$143 USD</p>
+                            <a href="#" class="btn btn-primary">Purchase</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="card">
+                        <img src="assets/Jordan 1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jordan New Beginnings Pack 1</h5>
+                            <p class="card-text">$169 USD</p>
+                            <a href="#" class="btn btn-primary">Purchase</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-            <div class="col-sm">
-            <div class="card" >
-            <img src="assets/Jordan 4.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Jordan 4 Retro What the (GS)</h5>
-              <p class="card-text">$183 USD</p>
-              <a href="#" class="btn btn-primary">Purchase</a>
-            </div>
-          </div>
-              </div>
-              <div class="col-sm">
-               <div class="card" >
-            <img src="assets/Jordan 1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Jordan New Beginnings Pack 1</h5>
-              <p class="card-text">$169 USD</p>
-              <a href="#" class="btn btn-primary">Purchase</a>
-            </div>
-          </div>
-              </div>
-            </div>
-          </div>
-        
+
     </div>
     <div class="col-sm">
         <div>
             <br>
             <h2>SKKD Shoes</h2>
             <br>
-            <p>We provide the most coveted shoes for an affordable price! We know what its like waking up at the crack of dawn only to recieve an "L" on the shoes you want. 
-               We created SKKD shoes not only for college credit, but for people to get the shoes they want at a price they like!</p>
+            <p>We provide the most coveted shoes for an affordable price! We know what its like waking up at the crack
+                of dawn only to recieve an "L" on the shoes you want.
+                We created SKKD shoes not only for college credit, but for people to get the shoes they want at a price
+                they like!
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-          </div>
-   
-    
+    </div>
+    <style>
+        body {
+            background-color: white;
+        }
+
+        h2 {
+            color: Black;
+            font-size: 400%
+        }
+
+        p {
+            color: black;
+        }
+    </style>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="assets\Nike-LeBron-Zoom-Soldier-12-Air-Raid-Product.jpg" alt="Nike Lebron Zoom Solider"style="width:300px;height:300px;">
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="assets\New-Balance-OMN1S-BHM-2020-Product.jpg" alt="Nike-SB-Dunk-Low-StrangeLove-Skateboards-Product"style="width:300px;height:300px;">
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="assets\Nike-SB-Dunk-Low-StrangeLove-Skateboards-Product.jpg" alt="Nike-SB-Dunk-Low-StrangeLove-Skateboards-Product"style="width:300px;height:300px;">
+            </div>
+        </div>
+    </div>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </body>
 <!-- Footer -->
-<footer class="footer page-footer font-small blue">
+<footer class="footer">
     <div class="container">
         <div class="row">
-            <span class="text-muted">&copy;SKKD,2020 | Terms Of Use | Privacy Statement</span>
+            <span class="text-muted"> &copy; SKKD,2020 | Terms Of Use | Privacy Statement</span>
         </div>
     </div>
     <!-- Copyright -->
